fix: smaller gaps between messages

--- a/src/components/HomePage/Message.module.scss
+++ b/src/components/HomePage/Message.module.scss
@@ -6,6 +6,8 @@
     flex-direction: column;
     gap: $padding * 0.5;
     opacity: 0;
+    padding: $padding * 0.1;
+    margin: 0;
 }
 
 .message {
